--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
-# Database Configuration
 DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_USER=your_username
 DB_PASSWORD=your_password
 DB_NAME=your_database
 DB_SSLMODE=disable
+
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+
