Refactor APP_URL handling and remove unused .gitkeep file in uploads directory

--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,4 @@ DB_NAME=your_database
 DB_SSLMODE=disable
 
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
-
+APP_URL=http://127.0.0.1:3002
