--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@ DB_SSLMODE=disable
 
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 APP_URL=http://127.0.0.1:3002
+
+GOOGLE_CLIENT_ID="YOUR_GOOGLE_CLIENT_ID_HERE"
+GOOGLE_CLIENT_SECRET="YOUR_GOOGLE_CLIENT_SECRET_HERE"
+GOOGLE_REDIRECT_URI="http://127.0.0.1:3002/auth/google/callback"
