--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,22 @@
 services:
+  caddy:
+    image: caddy:2-alpine
+    container_name: synergazing-caddy
+    restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./Caddyfile:/etc/caddy/Caddyfile
+      - caddy_data:/data
+      - caddy_config:/config
+    networks:
+      - synergazing-net
+
   app:
     build: .
     container_name: synergazing-app
     restart: unless-stopped
-    ports:
-      - "3002:3002"
     volumes:
       - ./storage:/root/storage
     env_file:
@@ -22,8 +34,6 @@ services:
       POSTGRES_USER: root
       POSTGRES_DB: synergazing
       POSTGRES_HOST_AUTH_METHOD: trust
-    ports:
-      - "5432:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
     networks:
@@ -35,3 +45,5 @@ networks:
 
 volumes:
   postgres-data:
+  caddy_data:
+  caddy_config:
