--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,49 +1,31 @@
 services:
-  caddy:
-    image: caddy:2-alpine
-    container_name: synergazing-caddy
-    restart: unless-stopped
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./Caddyfile:/etc/caddy/Caddyfile
-      - caddy_data:/data
-      - caddy_config:/config
-    networks:
-      - synergazing-net
-
   app:
     build: .
     container_name: synergazing-app
     restart: unless-stopped
-    volumes:
-      - ./storage:/root/storage
-    env_file:
-      - .env
+    env_file: .env
     depends_on:
       - db
     networks:
-      - synergazing-net
+      - caddy_net_external
 
   db:
     image: postgres:15-alpine
     container_name: synergazing-db
     restart: unless-stopped
     environment:
-      POSTGRES_USER: root
-      POSTGRES_DB: synergazing
-      POSTGRES_HOST_AUTH_METHOD: trust
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
     volumes:
       - postgres-data:/var/lib/postgresql/data
     networks:
-      - synergazing-net
+      - caddy_net_external
 
 networks:
-  synergazing-net:
-    driver: bridge
+  caddy_net_external:
+    external: true
+    name: caddy_net
 
 volumes:
   postgres-data:
-  caddy_data:
-  caddy_config:
