Add timeline status support to projects
- Introduce timeline status enum and schema - Update project stage 5 to
accept timeline objects with status - Add endpoint to fetch timeline
status options - Update migrations and models for timeline status -
Improve Docker commands in deploy workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,5 +16,5 @@ jobs:
       - name: Rebuild and Deploy Application
         run: |
           cd /home/rebbeca/synergazing/synergazing_backend
-          docker compose down
-          docker compose up -d --build --force-recreate
+          sudo docker compose down
+          sudo docker compose up --build -d
