separate the frontend url to env and add example to .env.example

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,10 @@ APP_URL=http://127.0.0.1:3002
 GOOGLE_CLIENT_ID="YOUR_GOOGLE_CLIENT_ID_HERE"
 GOOGLE_CLIENT_SECRET="YOUR_GOOGLE_CLIENT_SECRET_HERE"
 GOOGLE_REDIRECT_URI="http://127.0.0.1:3002/api/auth/google/callback"
+
+FRONTEND_URL="YOUR URL"
+
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USERNAME=
+EMAIL_PASSWORD=
