--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     build: .
     container_name: synergazing-app
     restart: unless-stopped
+    ports:
+      -"127.0.0.1:5432:5432"
     env_file: .env
     depends_on:
       - db
